refactor: adjust orderBy feature
